--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -35,6 +35,25 @@ $navbar-default-bg:black;
   font-weight: bold;
 }
 
+
+.article-actions {
+border-top: 1px solid #eaeaea;
+padding-top: 5px;
+}
+.description {
+margin-top: 0;
+}
+
+article-title {
+font-weight: bold;
+font-size: 1.5em;
+}
+.article-body {
+border-top: 1px solid #eaeaea;
+padding-top: 15px;
+padding-bottom: 15px;
+}
+
 footer {
   margin-top: 45px;
   padding-top: 5px;
