--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -54,6 +54,11 @@ padding-top: 15px;
 padding-bottom: 15px;
 }
 
+.article-meta-details {
+border-top: 1px solid #eaeaea;
+margin-top: 20px;
+}
+
 footer {
   margin-top: 45px;
   padding-top: 5px;
